<resources>
    <string name="app_name">Deproo</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Hapus</string>
    <string name="nav_home">Home</string>
    <string name="nav_newsfeed">Berita</string>
    <string name="nav_profile">Profil</string>
    <string name="nav_inbox">Pesan</string>
    <string name="nav_favourite">Favorit</string>
    <string name="title_edit_profile">Edit Biodata dan Profile</string>
    <string name="title_asset_descr">Deskripsi Asset</string>
    <string name="title_new_asset">Asset Baru</string>
    <string name="title_add_review">Beri Ulasan</string>
    <string name="title_preview_image">Preview</string>
    <string name="title_broker_profile">Profile Broker</string>
    <string name="title_asset_detail">Detail Asset</string>
    <string name="title_asset_list">Asset</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>

    <string name="back4app_app_id">XB5TmD2yD6TqqIAw4Z8mL5yB7j24KeJ51hru1OgU</string>
    <string name="back4app_client_key">SIRjjDTVXrsYWdzplWpHVFysIcEStnUdpnCIT6IR</string>
    <!--
    <string name="back4app_app_id">JFxOEWM0ZHVTVKNXkowQMLgBeI957isdZvjpZGmP</string>
    <string name="back4app_client_key">glw2t0q6NOD3M3vDhDq8GhG5V4xHpkAyEGYMfi6P</string>
    -->
    <string name="facebook_app_id">1544429589013424</string>
    <string name="fb_login_protocol_scheme">fb1544429589013424</string>

    <string name="google_client_id">69524391139-k96me1iun9s65465fi92qrvunvf4ujpl.apps.googleusercontent.com</string>
    <string name="google_maps_key">AIzaSyBYGIK2evxYMh7LotPtSApdD4-SLW5Niww</string>
    <string name="bing_token">AtlkjmP5To0YTOLiUdvFtkhFominFfGPjpWuPPSwHlgYs_CNhkY8XLS1ieT0X0SX</string>
    <string name="title_activity_broker_profile">BrokerProfileActivity</string>
    <string name="m2"><![CDATA[%1$s m<sup><small><small>2</small></small><sup>]]></string>
    <string name="gcm_sender_id">69524391139</string>
</resources>
